wizard: do not create the phonebook
a phonebook should be created for each tenant
