# xivo_confd/plugins/wizard/api.yml
@@ -208,10 +208,6 @@ definitions:
         type: boolean
         default: true
         description: Initialize xivo-provd database?
-      phonebook:
-        type: boolean
-        default: true
-        description: Create phonebook in wazo-dird?
       tenant:
         type: boolean
         default: true
